# work_utils

./: .gitignore  .pydevproject  .qiubai.py.swp  active.py  baidu.py  bak.py  call_dir.py  clock.py  decorate.py  device.py  dict_test.py  exception.py  exit_thread.py  freetype.py  generate_ipv6_link.py  get_dns.py  hello_flask.py  ifconfig.py  import.py  ipv4.py  json_test.py  mac_re.py  mail.py  mouse.py  netlink.py  pyqt.py  pyqt_sqlite.py  pyroute2.py  pyroute2_test.py  python_file.py  qrcode_demo.py  replaces_lines.py  replacetest.py  snippet.py  socket_ip.py  testdb2py.py  testpycurl.py  time_test.py  wxpython.py
1/: config.yaml
1/.svn/text-base/: wx_interface.php.svn-base
android/: Android_lancher_unit_test.txt  README.md
android/lib/: Android_lancher_unit_test.py  autotestunit.py  check.py
cxx/conan/: CMakeLists.txt  conanfile.txt  mock01.cpp
cxx/demo/demo1/: CMakeLists.txt  demo.cpp
cxx/demo/demo2/: demo.cpp
cxx/demo/ffmpeg/: CMakeLists.txt  brv_bit_stream_parser.cpp  brv_bit_stream_parser.hpp  test_brv_bs_parser.cpp
cxx/demo/ffmpeg/decoder/: Jockey_1280x720_8bit.264
cxx/demo/thread/: CMakeLists.txt  demo.cpp
cxx/gmock/: CMakeLists.txt
cxx/js_walk/: CMakeLists.txt  main.cpp
cxx/js_walk/data/: config.json
cxx/largest_x/: CMakeLists.txt  largest_x.cpp
cxx/largest_x/data/: dat_0.txt  dat_1.txt
cxx/logger/: CMakeLists.txt  README.md  logger.cpp  logger.hpp  main.cpp
cxx/rapidjson/: CMakeLists.txt  brv_parameter_base.cpp  brv_parameter_base.hpp  main.cpp
cxx/rapidjson/data/: config.json  json_test.json
dbus_demo/: .project  ip.py
dllcall/: hello.c
email_protect/ccl_daily/: obr_plus.json
email_protect/email/: common_key.py  crypto_test.py  readme.MD  test.py
flask_test/: actionlayer.py  hardware.py  web_layer.py
gateway/: dns_parse.py  gateway.py  plugin_protocol.py  time_tools.py
gerrit/: .shell_tools.py.swp
git-sina-weibo/: main.cpp  oauth.h  parsexml.cpp  sinaWeibo.pro  thread.cpp
git-sina-weibo/.svn/text-base/: oauth.cpp.svn-base  sina.h.svn-base  statuses.cpp.svn-base  statuses.h.svn-base  therad.cpp.svn-base  thread.h.svn-base  weiBoData.h.svn-base  xmlParser.h.svn-base  xmlparse.h.svn-base
heartbeat/: brocast.py
html/: droplist.html
i2c/: time_tools.py  time_tools.py~
inotify/: inotify_test.py
keyboard/: key_listener.py
libtest/: alisa_test.py
mail/: .user.lst.swp  mail.t  title.t
netlink/: .cproject  .project
netlink/Debug/: event  makefile
netlink/src/: event.c
network/: addresses.py  demo.py
oswalk/: copy_file_dir.py  dirs.py  oswalk.py  update.py
pyroute2/: addif.py
python/: all_depends.py  channel.py  class_father_call.py  classmethod.py  cpgmgt_service_ifconfigobject.py  dbfm_test.py  dhcp.py  exception_final_test.py  exit_signal.py  fifo.py  find_mac.py  flask.sh  gateway_switch.py  generate_ipv6_link.py  get_db.py  get_dns.py  json_test.py  list_remove_dup.py  log.py  loging_test.py  mmap.py  netlink.py  nm-tool.py  osinfo.py  processbat_test.py  pyroute2_test.py  python_switch.py  qiubai.py  qiubai2.py  rs232.py  ssh.py  switch.py  syncdb.py  test_inspect.py  theadinglock.py  thread.py  vlan.py
python/1/: index.php
python/1/.svn/: all-wcprops  entries
python/android/lib/: mouse.py
python/bt2magnet/: bt2url.py  test.torrent
python/csdn/: csdn_export.py  get_img.py
python/dbus_demo/: .pydevproject  dbus_demos.py
python/dllcall/: dllcall.py  paizhao.py
python/doban_girl/: download.py
python/email_protect/ccl_daily/: auto_ccl.md  auto_ccl.py  obr_c0.json  obr_template.html  setup.sh
python/email_protect/email/: crypto_utils.c  email_utils.py  gen_lib.sh  key.txt  plain_test.py  setup.py
python/findCaseName/: findCaseName.py
python/framework/: client.py
python/gateway/: class_base.py  gateway.py  net_handler.py  serial.py
python/gerrit/: shell_tools.py
python/git-sina-weibo/: parsexml.h  xmlParser.cpp
python/git-sina-weibo/.svn/: all-wcprops  entries
python/git-sina-weibo/.svn/text-base/: constData.h.svn-base  sina.cpp.svn-base
python/heartbeat/: listener.py
python/inotify/: hello  python-inotify-0.9.4-1.fc16.noarch.rpm
python/libtest/: test_class.py
python/mail/: sendUser.py  user.lst
python/netlink/: pyrouter.py
python/netlink/Debug/src/: event.d  subdir.mk
python/netlink/src/: a.out
python/network/: test.py
python/oswalk/: c-sim_auto.py
python/robot/: loop_and_set_suite_variable.txt
python/sae_weixin/handy/.svn/: entries
python/sae_weixin/handy/1/: weixinIterface.py
python/sae_weixin/handy2/.svn/: entries
python/sae_weixin/handy2/1/: weixinInterface.py
python/tcp_proxy/: tcp_proxy.py
python/usb/: .cproject  .project
python/usb/Debug/: makefile
python/watermarker/: readme.MD  watermarker.py
python/xml_test/: dom_list_add.py  testxml.py
python/youdao/: client.py  http.py
python/zigbee-gw/: cmd_define.py  cmd_utils.py  common_utils.py  config_utils.py  gateway.py  http_utils.py  install.sh  serial_controller.py
sae_weixin/EaglePHP/Data/Config/: System.php
sae_weixin/handy/.svn/: all-wcprops
sae_weixin/handy/1/.svn/: all-wcprops  entries
sae_weixin/handy2/.svn/: all-wcprops
sae_weixin/handy2/1/.svn/: entries
usb/: hsb.c
usb/Debug/: subdir.mk
xml_test/: testlink_update.py
youdao/: client.py  http.py  oauth.py  sina.py
zigbee-gw/: __init__.py  class_base.py  class_struct_base.py  cmd_define.py  cmd_utils.py  config.ini  gateway.py  http_utils.py  main.py  serial_controller.py  struct_base.py  switch.py~  thread_test.py  time_check.py
(+17 files in other folders)
